--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^9.7.6",
+    "framer-motion": "^1.10.3",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.6",
+    "postcss-import": "^12.0.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "tailwindcss": "^1.4.4"
   }
 }
